[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jex"
version = "0.1.0"
description = "Interactive JSON explorer for your terminal."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["json", "tui", "textual", "cli", "developer-tools", "explorer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Utilities",
]

dependencies = [
    "textual>=0.60",
    "click>=8.1",
]

[project.optional-dependencies]
clipboard = ["pyperclip>=1.8"]

[project.scripts]
jex = "jex.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/jex"
Repository = "https://github.com/yourusername/jex"
